--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Jake Portfolio Styling File */
+
 body {
     height: auto;
     margin: 0 auto;
@@ -12,6 +14,7 @@ body {
 header {
     margin: 0 auto;
     position: sticky;
+    margin-top: 0;
     padding: .5em 0em 0em;
     width: 100%;
     text-align: center;
@@ -234,5 +237,39 @@ form > div > div > button {
     color: #61f3fd;
 }
 
+/* Top Banner  ------------------------------------------------------------------*/
+
+.top-banner {
+    max-height: 5vh;
+    min-height: 4rem;
+    background-color: #61f3fd;
+    display: flex;
+    position: sticky;
+    top: 0;
+    flex-direction: row;
+    flex: 0;
+    justify-content: space-between;
+    align-content: center;
+    z-index: 1000;
+    
+}
+
+.top-banner > p {
+    margin-left: 3vw;
+    min-width: calc(90%-1vw);
+    color: #242424;
+}
+
+.top-banner > p > strong {
+    font-weight: 800;
+}
+
+.top-banner > button {
+    border: none;
+    color: #242424;
+    padding: 0 2vw;
+    max-width: fit-content;
+    min-height: 100%;
+}
 
 
