--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 /* Jake Portfolio Styling File */
 
 body {
-    height: auto;
-    margin: 0 auto;
     background-color: #284074;
     color: #e5e8f0;
     font-weight: 300;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0;
 }
 
 header {
@@ -30,10 +29,11 @@ header {
 
 main {
     width: 95%;
-    height: auto;
+    min-height: 70vh;
+    height: fit-content;
     padding: 0.5%;
     margin: 0 auto;
-    flex-grow: .95;
+    flex-grow: 1;
 }
 
 /* Custom Subheader Code  ------------------------------------------------------------------*/
@@ -61,7 +61,6 @@ main {
 
 footer {
     margin: 0 auto;
-    position: sticky;
     padding: .5em 0em;
     width: 100%;
     text-align: center;
@@ -272,4 +271,84 @@ form > div > div > button {
     min-height: 100%;
 }
 
+/* Gallery Setup  ------------------------------------------------------------------*/
 
+.gallery-container{
+    width: 100%;
+    height: 5rem;
+    align-content: center;
+}
+
+#main-display {
+    width: calc(75% - 2rem);
+    margin-left: 12.5%;
+    object-fit: contain;
+    background-color: #61f3fd;
+    padding: 1rem;
+    box-shadow: #0000005d 0px 4px 12px;
+}
+
+.thumbnail-container {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 2rem 0;
+    flex-wrap: wrap;
+}
+
+@media screen and (min-width: 750px) {
+
+    .thumbnail-container {
+    flex-wrap: nowrap;
+    }
+    
+}
+
+.thumbnail {
+    width: 100px;
+    height: 100px;
+    margin: 1rem;
+    cursor: pointer;
+    object-fit: contain;
+}
+
+
+/* Expanding Cards  ------------------------------------------------------------------*/
+
+.exp-card-box {
+    min-height: 100%;
+    width: calc(100% - 5%);
+    margin: 0 2.5%;
+}
+
+.expanding-card {
+    margin: 10% 0;
+    width: 90%;
+    height: 3rem;
+    overflow: hidden;
+    background-color: #1a2131;
+    padding: 2rem;
+    border-radius: 2.5rem;
+    flex-grow: 1;
+
+}
+
+.exp-card-title {
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.exp-card-content {
+    transform: translateY(10%);
+    transition: all 1s cubic-bezier(10s,10s,10s,10s);
+}
+
+.expanding-card:hover {
+    height: fit-content;
+    overflow: visible;
+
+    .exp-card-content {
+        transform: translateY(0%);
+    }
+}
