--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ main {
     padding: 0.5%;
     margin: 0 auto;
     flex-grow: 1;
+    margin-top: 1rem;
 }
 
 /* Custom Subheader Code  ------------------------------------------------------------------*/
