--- a/css/style.css
+++ b/css/style.css
@@ -376,6 +376,6 @@ form>div>div>button {
     }
 }
 
-.BIckround {
-    background-image: linear-gradient(45deg, #bf04c5, #0031a5);
+#backstory {
+   font-size: 2rem; 
 }
