--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,44 @@ p {
     color: #f2f6ff;
 }
 
+/* 404 Page Styling  ------------------------------------------------------------------*/
+
+#construction {
+    padding: 10% 0%;
+    min-height: 40vh;
+    min-width: 50%;
+    text-align: center;
+    background-color: transparent;
+    color: #1a2131;
+}
+
+#construction a>button {
+    font-size: 2rem;
+    padding: 1rem 1rem;
+    background-color: #1a2131;
+    color: #e3ecff;
+    height: fit-content;
+}
+
+#construction a>button:hover {
+    transition: .25s;
+    background-color: #5d76b3;
+    color: #1a2131;
+}
+
+#construction i.fa-gear {
+    animation: spin 8s linear infinite; 
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* Form Styling  ------------------------------------------------------------------*/
 
 input {
